[package]
name = "simple_linked_list"
version = "0.1.0"
edition = "2021"

description = "A singly linked list made using smart pointer"
repository = "https://github.com/payalrajendrapaunikar/linked_list.git"
categories = ["linked-list","linked-list-rust"]
license = "MIT"

[dependencies]

[profile.dev]
opt-level =1

[profile-release]
opt-level =3
